fix font sizes and spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
 .notbold{
   font-weight:normal
 }​
+
+.nopadding {
+  padding: 0;
+  margin: 0;
+}
